workshop04/wordpress/wpapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wpapp-deploy
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wpapp-pod
  template:
    metadata:
      name: wpapp-pod
      labels:
        app: wpapp-pod
    spec:
      volumes:
      - name: wp-vol
        persistentVolumeClaim:
          claimName: wpapp-pvc

      containers:
      - name: wpapp-container
        image: wordpress
        imagePullPolicy: IfNotPresent
        ports:
        - name: wpapp-port
          containerPort: 80
        
        volumeMounts:
        - name: wp-vol
          mountPath: /var/www/html
---
apiVersion: v1
kind: Service
metadata:
   name: wpapp-svc
   labels:
      app: wordpress

spec:
   type: ClusterIP
   selector:
      app: wpapp-pod
   ports:
   - name: app-port
     port: 80
     targetPort: wpapp-port
