workshop04/wordpress/wp-ing.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
   name: wp-ing
   labels:
      app: wordpress
   annotations:
      kubernates.io/ingress.class: "nginx"
spec:
   rules:
    - host: "wordpress.167.172.6.183.nip.io"
      http:
        paths:
        - path: /
          backend:
              serviceName: wpapp-svc
              servicePort: 80
